kubernetes/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-umg-frontend
  labels:
    app: hotel-umg-frontend
spec:
  #replicas: 1
  selector:
    matchLabels:
      app: hotel-umg-frontend
  template:
    metadata:
      labels:
        app: hotel-umg-frontend
    spec:
      containers:
        - name: hotel-umg-frontend
          image: docker.io/meza360/hotel-umg-fe:1.0
          # environment variables defined by user
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "250m"
              memory: "256Mi"
            requests:
              cpu: "150m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
                - name: X-GT2-APP-CONSUMER
                  value: localk8s
            initialDelaySeconds: 30
            periodSeconds: 30
            terminationGracePeriodSeconds: 60
      restartPolicy: Always
